--- a/server/pom.xml
+++ b/server/pom.xml
@@ -78,6 +78,11 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
